force-app/main/default/objects/WSM_Signatory_Template__c/WSM_Signatory_Template__c.object-meta.xml
<CustomObject>
    <label>WSM Signatory Template</label>
    <nameField>
        <label>Signatory Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>WSM Signatory Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>