force-app/main/default/objects/WSM_Signatory_Template__c/fields/Allow_Signature_Box_Signature__c.field-meta.xml
<CustomField>
    <fullName>Allow_Signature_Box_Signature__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This will allow the client to sign with the signature box which saves an image of their signature input by their mouse or finger from their device.</description>
    <inlineHelpText>This will allow the client to sign with the signature box which saves an image of their signature input by their mouse or finger from their device.</inlineHelpText>
    <label>Allow Signature Box Signature</label>
    <type>Checkbox</type>
</CustomField>