force-app/main/default/objects/WSM_Signatory_Template__c/fields/Allow_Text_Signature_Entry__c.field-meta.xml
<CustomField>
    <fullName>Allow_Text_Signature_Entry__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Clicking this will allow for the client to sign with by just typing their name.</description>
    <inlineHelpText>Clicking this will allow for the client to sign with by just typing their name.</inlineHelpText>
    <label>Allow Text Signature Entry</label>
    <type>Checkbox</type>
</CustomField>