force-app/main/default/objects/WSM_Signatory_Template__c/fields/Keyword_Offset_Pixels__c.field-meta.xml
<CustomField>
    <fullName>Keyword_Offset_Pixels__c</fullName>
    <description>The number of pixels from the found Keyword to place the signature.</description>
    <inlineHelpText>The number of pixels from the found Keyword to place the signature.</inlineHelpText>
    <label>Keyword X Offset (Pixels)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>