force-app/main/default/objects/WSM_Signatory_Template__c/fields/Location_Search_Keyword__c.field-meta.xml
<CustomField>
    <fullName>Location_Search_Keyword__c</fullName>
    <description>The keyword to search the PDF for placement of this signature.</description>
    <inlineHelpText>The keyword to search the PDF for placement of this signature.</inlineHelpText>
    <label>Location Search Keyword</label>
    <length>255</length>
    <type>Text</type>
</CustomField>