force-app/main/default/objects/WSM_Signatory_Template__c/fields/Page_Number__c.field-meta.xml
<CustomField>
    <fullName>Page_Number__c</fullName>
    <description>The page number to place the signature. NOTE: The first page is = 0.</description>
    <inlineHelpText>The page number to place the signature. NOTE: The first page is = 0.</inlineHelpText>
    <label>Page Number</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>