force-app/main/default/objects/WSM_Signatory_Template__c/fields/Page_X_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>Page_X_Coordinates__c</fullName>
    <description>The coordinates to place the signature on the page.</description>
    <inlineHelpText>The coordinates to place the signature on the page.</inlineHelpText>
    <label>Page X Coordinates (Pixels)</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>