force-app/main/default/objects/WSM_Signatory_Template__c/fields/Signatory_Type__c.field-meta.xml
<CustomField>
    <fullName>Signatory_Type__c</fullName>
    <description>SF Person Record can be any Salesforce Person Record. It can be a Lead, Contact, User. This can be a merge field from the record generating the document.

Static Name and Email will always go to that person.</description>
    <inlineHelpText>SF Person Record can be any Salesforce Person Record. It can be a Lead, Contact, User. This can be a merge field from the record generating the document.

Static Name and Email will always go to that person.</inlineHelpText>
    <label>Signatory Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>SF Person Record</fullName>
            </value>
            <value>
                <fullName>Static Name and Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>