force-app/main/default/objects/WSM_Signatory_Template__c/fields/Signature_Placement_Method__c.field-meta.xml
<CustomField>
    <fullName>Signature_Placement_Method__c</fullName>
    <label>Signature Placement Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Page Number and Coordinates</fullName>
            </value>
            <value>
                <fullName>Signature Field Name</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>