force-app/main/default/objects/WSM_Signatory_Template__c/fields/Static_Email_Address__c.field-meta.xml
<CustomField>
    <fullName>Static_Email_Address__c</fullName>
    <label>Static Email Address</label>
    <type>Email</type>
</CustomField>