force-app/main/default/objects/WSM_Signatory_Template__c/fields/Static_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Static_First_Name__c</fullName>
    <label>Static First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>