force-app/main/default/objects/WSM_Signatory_Template__c/fields/WSM_Document_Template__c.field-meta.xml
<CustomField>
    <fullName>WSM_Document_Template__c</fullName>
    <description>The template this signatory will sign for.</description>
    <inlineHelpText>The template this signatory will sign for.</inlineHelpText>
    <label>WSM Document Template</label>
    <referenceTo>WSM_Document_Template__c</referenceTo>
    <relationshipName>Signatories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>